# tiny-gpu-compiler

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  deploy-web.yml
docs/: cmake-package-config-and-mlir-explained.md  native-build-and-run-guide.md
docs/onboarding/: 00-overview.md  01-reading-order.md  02-native-compiler-architecture.md  03-web-stack.md  04-build-test-debug.md  05-gotchas-and-mental-models.md  06-where-to-change-what.md  README.md
examples/: conv1d.tgc  dot_product.tgc  matrix_add.tgc  matrix_multiply.tgc  relu.tgc  saxpy.tgc  shared_reduce.tgc  shared_tile_add.tgc  vector_add.tgc  vector_max.tgc  vector_reduction.tgc
include/: CMakeLists.txt
include/tiny-gpu-compiler/CodeGen/: RegisterAllocator.h  TinyGPUEmitter.h
include/tiny-gpu-compiler/Dialect/: CMakeLists.txt
include/tiny-gpu-compiler/Frontend/: AST.h  Lexer.h  MLIRGen.h  Parser.h
include/tiny-gpu-compiler/Passes/: Passes.h
include/tiny-gpu-compiler/Pipeline/: Pipeline.h
lib/: CMakeLists.txt
lib/CodeGen/: CMakeLists.txt  RegisterAllocator.cpp  TinyGPUEmitter.cpp
lib/Dialect/TinyGPU/: CMakeLists.txt  TinyGPUDialect.cpp  TinyGPUOps.cpp
lib/Frontend/: CMakeLists.txt  Lexer.cpp  MLIRGen.cpp  Parser.cpp
lib/Passes/: CMakeLists.txt  Passes.cpp
lib/Pipeline/: CMakeLists.txt  Pipeline.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CodeGen/: vector_add_asm.tgc
test/Frontend/: vector_add.tgc
tools/: CMakeLists.txt
tools/tgc/: CMakeLists.txt  tgc.cpp
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/compiler/: TGCCompiler.ts  types.ts
web/src/components/: AnalysisPanel.tsx  BinaryView.tsx  Editor.tsx  GPUSimulator.tsx  PipelineView.tsx
web/src/examples/: index.ts
web/src/simulator/: TinyGPUSim.ts
web/src/styles/: global.css
(+5 files in other folders)
